force-app/main/default/objects/Book__c/Book__c.object-meta.xml
<CustomObject>
    <description>Books stored in a Library.</description>
    <label>Book</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>