force-app/main/default/objects/Book__c/fields/Copies_Left__c.field-meta.xml
<CustomField>
    <fullName>Copies_Left__c</fullName>
    <label>Copies Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>