force-app/main/default/objects/Book__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <description>Book&apos;s Genre.</description>
    <inlineHelpText>Book&apos;s Genre.</inlineHelpText>
    <label>Genre</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Book_Genres</valueSetName>
    </valueSet>
</CustomField>