force-app/main/default/objects/Book__c/fields/Library__c.field-meta.xml
<CustomField>
    <fullName>Library__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Library</label>
    <referenceTo>Library__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>