force-app/main/default/objects/Book__c/fields/Total_number_of_copies__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_copies__c</fullName>
    <description>Total number of copies available.</description>
    <inlineHelpText>Total number of copies available.</inlineHelpText>
    <label>Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>