force-app/main/default/objects/Book__c/validationRules/Valid_number_of_copies.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_number_of_copies</fullName>
    <active>true</active>
    <errorConditionFormula>Total_number_of_copies__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Total_number_of_copies__c</errorDisplayField>
    <errorMessage>The number of copies can&apos;t be negative!</errorMessage>
</ValidationRule>