force-app/main/default/objects/Book__c/validationRules/Valid_number_of_copies_left.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_number_of_copies_left</fullName>
    <active>true</active>
    <errorConditionFormula>Copies_Left__c &gt;  Total_number_of_copies__c ||  Copies_Left__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Copies_Left__c</errorDisplayField>
    <errorMessage>Not a valid number of copies left</errorMessage>
</ValidationRule>